--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">TUCCA</string>
+    <string name="app_name">Transportes Bahía de Cádiz</string>
     <string name="main">Principal</string>
     <string name="trip">Realizar viaje</string>
-    <string name="map">Mapa de líneas</string>
+    <string name="lines">Mapa de líneas</string>
     <string name="cards">Mis tarjetas</string>
     <string name="sales">Puntos de venta</string>
     <string name="gap">Saltos</string>
@@ -15,12 +15,22 @@
     <string name="navigation_drawer_open">Open Navigation Drawer</string>
     <string name="navigation_drawer_close">Close Navigation Drawer</string>
     <string name="search_hint">Introduzca código o nombre de parada</string>
-    <string name="main_search_hint">Para consultar el tiempo de espera de una parada selecciones el icono en forma de lupa</string>
-    <string name="main_location_hint">Si pulsa en el icono de ubicaión a la derecha de la lupa, podrá consultar los diferentes autobuses que
-    pasan por la ubicación seleccionada</string>
+    <string name="fare_system">Zonas del sistema tarifario</string>
     <string name="location_title">Seleccione una posición para su localización</string>
     <string name="select_location">Seleccione una dirección</string>
     <string name="accept">Aceptar</string>
     <string name="cancel">Cancelar</string>
+    <string name="origin_city">Municipio origen</string>
+    <string name="destiny_city">Municipio destino</string>
+    <string name="origin_centre">Núcleo origen</string>
+    <string name="destiny_centre">Núcleo destino</string>
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCG8b65kHX5KO5JlD_KK2wdwiPPYcmzTaQ</string>
+    <string name="user">Usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="password_again">Repita contraseña</string>
+    <string name="log_in">Iniciar sesión</string>
+    <string name="sign_up">Registrarse</string>
+    <string name="email">Correo electrónico</string>
+    <string name="phone">Teléfono</string>
+    <string name="terms">Acepto los términos y las condiciones de uso</string>
 </resources>
