--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="origin_centre">Núcleo origen</string>
     <string name="destiny_centre">Núcleo destino</string>
     <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCG8b65kHX5KO5JlD_KK2wdwiPPYcmzTaQ</string>-->
-    <string name="user">Usuario</string>
+    <string name="usuario">Usuario</string>
     <string name="password">Contraseña</string>
     <string name="password_again">Repita contraseña</string>
     <string name="log_in">Iniciar sesión</string>
@@ -61,7 +61,7 @@
     <string name="insert_quantity">Introduzca cantidad para la recarga</string>
     <string name="no_user">Debe iniciar sesión para ver sus datos</string>
     <string name="centre">Núcleo</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="change_image">Cambiar imágen</string>
+    <string name="camera">Elegir foto existente</string>
+    <string name="existing_photo">Tomar foto</string>
 </resources>
